syntax = "proto3";

option csharp_namespace = "GrpcTestService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc GetMessage (MessageRequest) returns (MessageResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message MessageRequest{
    string msg = 1;
    int32 count = 2;
}

message MessageResponse{
    repeated string answer = 1;
}